Bug 53001 - REPORT BUILDER UI: Unlink picture action in Image control file dialog without effect
Summary: REPORT BUILDER UI: Unlink picture action in Image control file dialog withou...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: Other All
: medium normal
Assignee: Joel Madero
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: difficultyBeginner, needsDevEval, topicUI
Depends on:
Blocks: 52942
  Show dependency treegraph
 
Reported: 2012-07-31 12:35 UTC by Rainer Bielefeld Retired
Modified: 2015-12-16 05:18 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-07-31 12:35:31 UTC
Test with Server Installation of  "LibreOffice 3.6.0.4 rc  English UI/ German Locale [Build-ID:  932b512] on German WIN7 Home Premium (64bit)

Start as in "Bug 52942 -EDITING ReportBuilder: - Pictures from file only can be embedded, not be linked" comment 1:

1. From Start Center create and save new "sample.odb"
2. Database-Pane: <Reports>
3. Tasks-Pane: 'Create Report in Design View ...'
  > Report Designer appears
4. Click into Page footer
   (Related properties appear at the right)
5. Click 'Graphic' icon in toolbar
6. Draw a 20mm x 20mm with pushed mouse button into footer field
   Propperties field will change to Image control will appear at the right
7. In 'Image control -> General' nearby bottom in line "Graphics" click 
   '...' button To insert a picture  
8. Browse for arbitrary few MB  .tif, leave "Linked" Checkbox checked  
   and insert Picture
   > Picture will appear in frame from Step 6 (for big picture file size it might take a minute or so), In Graphic field you read 
     something like 
     "C:\.....\picture.png"
9. save all and close
   > Small file size shows: picture is embedded.

10. reopen .odb and report
11. delete picture
12. redo 4. ... 8., in file dialog uncheck "Link"
    No picture appears

So in the file dialog "Link" option should be greyed out (with checked 'Link')
as it is in file dialog, because it is not possible to embed Pictures.

NEW due to Bug 52942
Comment 1 Rainer Bielefeld Retired 2012-07-31 12:46:49 UTC
Already [Reproducible] with "LibreOffice 3.4.5 German UI [Build ID: OOO340m1 (Build:502)]" parallel Server installation on German WIN7 Home Premium (64bit), this probably never worked correctly.

@Joel:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Comment 2 Joel Madero 2012-07-31 14:05:28 UTC
Not sure if I'll be able to handle this. If someone else wants to try before I get to it. If I can get through the couple bugs I've started I'll see what I can do about this one. 

Do we have any idea where the code is hanging out for this?
Comment 3 Rainer Bielefeld Retired 2012-07-31 14:52:18 UTC
@Joel:
No Idea how we handle this, that will be something between Oracle Report builder (Who ever might be the maintainer, Before some users on German Mailing list starte a QA initiative interest in this Extension was rather small) and LibO ....

If you find the time to do this it's fine, if not I will try to find an other volunteer in 2 or 3 weeks.
Comment 4 Joel Madero 2012-07-31 18:07:29 UTC
Changed my mind, I'll take it :) Might take awhile for me to get it done but I'll start investigating the issue tonight :)
Comment 5 Jochen 2012-08-03 19:57:00 UTC
Hi Joel,

are you a specialist for fixing bugs concerning "report builder"?
If yes: have you time to have a look on the other problems concerning "report builder" (see [1]).

[1] https://bugs.freedesktop.org/buglist.cgi?resolution=---&query_format=advanced&bug_status=NEW&component=Database&product=LibreOffice&list_id=101200
Comment 6 Joel Madero 2012-08-03 20:02:19 UTC
I'm not a specialist at anything ;) I'm a hobbiest that picks bugs up as I can. We have a very limited number of developers but we're working as hard as we can to get things done in a timely manner - I know that as a user it's easy to get frustrated when progress seems slow. Right now I have 6 bugs active on my list of to do's but I'll take a look at those other bugs when I have time. Trust me, the devs are constantly monitoring FDO and always closing bugs. I'll raise your concern with report builder and see if we can get a dedicated dev to look it over. Thanks for your feedback
Comment 7 Joel Madero 2012-08-21 20:45:16 UTC
Patch submitted through mailing list. Will mark as RESOLVED as soon as it's pushed.
Comment 8 Lionel Elie Mamane 2012-08-22 07:36:07 UTC
Reproduced with

LibreOffice 3.3.4 
OOO330m19 (Build:401)
tag libreoffice-3.3.4.1

on Debian GNU/Linux amd64 .debs from www.libreoffice.org
Comment 9 Not Assigned 2012-08-23 12:51:33 UTC
Joel Madero committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4b0ce8887a743d30a0107bc7b8f652b0e3b074c

fdo#53001 disable unlink graphics in image control dialog in base report builder
Comment 10 Not Assigned 2012-08-23 12:51:51 UTC
Joel Madero committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95cedcc822ec1faa88f74771e3d435da926850d4&g=libreoffice-3-6

fdo#53001 disable unlink graphics in image control dialog in base report builder


It will be available in LibreOffice 3.6.2.
Comment 11 Robinson Tryon (qubit) 2015-12-16 05:18:53 UTC
Migrating Whiteboard tags to Keywords: (ProposedEasyHack -> needsDevEval,  DifficultyBeginner  TopicUI  )
[NinjaEdit]